# mcp-build-chess

./: README.md  main.py  pyproject.toml
src/chess/: chess_api.py  test.py
